--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7"
   }
 }
